# cmaketest

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: cxx_build.cmake  gtest.cmake
src/: CMakeLists.txt
src/MathFunctions/: CMakeLists.txt  Sqrt.h
src/sandbox/: CMakeLists.txt  main.cpp  version.h  version.h.in
src/sandbox/MathFunctions/: Sqrt.cpp
test/: CMakeLists.txt
test/MathFunctionsTest/: CMakeLists.txt  main.cpp
